scss/post.scss
/* ... */
.dropdown-item a {
  display: block;
  width: 100%;
  color: $dropdown-link-color;
}


.jschooser .choosercontainer #chooseform .alloptions .option .typename {
  width: auto;
}

.notifytiny {
  margin-top: $navbar-height;
}

/* General */
.btn {
  border-radius: 3px;
}

.btn-icon-only {
  i {
    margin-right: 0 !important;
  }

  &:hover {
    i {
      color: white;
    }
  }
}

#page-footer {
  box-shadow: 0px -5px 2px rgba(0, 0, 0, 0.15);
}

#block-region-side-pre {
  padding-top: 1.25em;
}

#nav-drawer {
  overflow-x: hidden;
  // Hide the scrollbar
  -ms-overflow-style: none;  // IE 10+
  scrollbar-width: none;  // Firefox

  &::-webkit-scrollbar {
    display: none;  // Safari and Chrome
  }
}


.empty-placeholder-image-sm {
  width: 5em;
}

/*
 * Navigation bar colors and layout.
 */
.navbar {
  background-color: $savoir-darkgrey;
  padding: 0;
  .logo-in-navbar {
    max-height: $navbar-height;
    padding-top: 5px;
    padding-bottom: 5px;
  }
  div.logo {
    background-color: $primary;
    width: $drawer-width;
    height: $navbar-height; // For FFX
    margin-right: 0 !important;
  }

  .custom-savoir-menu {
    li {
      padding-left: 1rem !important;
      height: $navbar-height;
      /* padding-top: 5px;// Changing font to Monserrat*/

      &:hover {
        background-color: $savoir-lightergrey;
      }

      .savoir-site-name {
        font-weight: bolder;
        color: white;
      }
    }

    .dropdown-menu {
      .dropdown-item {
        /* Ugly hack to hide the language indicator link */
        &:last-child {
          display: none;
        }
      }
    }
  }

  .usermenu {
    padding-left: 1rem !important;
    height: $navbar-height;
    /* padding-top: 7px; // Changing font to Monserrat*/
    padding-right: 24px;

    &:hover {
      background-color: $savoir-lightergrey;
    }

    a.dropdown-toggle, .login a {
      color: $navbar-dark-active-color;

      @include hover-focus {
        color: $navbar-dark-active-color;
      }
    }

    /* WTF?? */
    .dropdown-menu {
      width: 120%;
      @media (min-width: map-get($grid-breakpoints, "md")) {
        left: 0;
      }
    }

    .dropdown-divider {
      display: none;
    }

    .login {
      color: white;
    }
  }

  #nav-message-popover-container, #nav-notification-popover-container {
    height: $navbar-height;
    /* padding-top: 7px; // Changing font to Monserrat*/
    padding-left: .5rem;
    padding-right: .5rem;
  }

  .dropdown-menu {
    padding-top: 0;
    padding-bottom: 0;
    border: none;

    .dropdown-item {
      padding: 1rem;
    }
  }

  /*  .dropdown.nav-item.show {
      background: $dropdown-bg;
    }
  */
}

[data-region="drawer-toggle"] {
  width: $drawer-width;
  @media (max-width: map-get($grid-breakpoints, "md")) {
    width: auto;
  }

  .drawer-img {
    max-height: 35px; /* To be consistent with front page logo size */
  }

  button {
    border: none;
    width: 100%;
    height: $navbar-height;

    &:focus {
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
    }
  }
}

[data-region="drawer"] {
  padding-left: initial;
  padding-right: initial;
  background-color: $primary;

  .list-group-item {
    background-color: $primary;
    color: white;
    border: none;

    &:hover {
      background-color: $savoir-darkprimary;
    }
  }

  .list-group-item.active {
    background-color: darken($primary, 10%);
  }

  z-index: $zindex-navbar-fixed + 1; // Avoid the drop shadow
}

.card {
  border: none;
  background: none;
  box-shadow: none;
}

.card-body {
  border-radius: 3px;
  border: none;
  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
  border-top: 3px solid $primary;
}

.card-header {
  background-color: $primary;
  color: white;
}

/* Remove box shadow for first card body and on the header */

.card-no-border, #page-header .card-body {
  border-radius: initial;
  border: none;
  border-top: none;
  box-shadow: none;
}

/* Front page layout */
#page-site-index {
  #page-wrapper {
    background-image: url('[[pix:theme_savoir|background]]');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    overflow: hidden; /*Avoid unwanted scroll*/
  }

  #page-wrapper::after {
    content: initial;
    min-height: initial;
  }

  @media (max-width: map-get($grid-breakpoints, "md")) {
    .navbar div.logo {
      width: initial;
    }
  }

  .card-body {
    box-shadow: none;
    border-top: none;
  }

  .card {
    color: white;
    overflow:auto;
    a {
      color: white;
      @include hover-focus {
        color: white;
      }
    }

    .site-frontpage-slogan {
      max-width: 20em;
      text-align: center;
    }

    .site-frontpage-title {
      font-size: 4vw;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        font-size: xx-large;
      }
      font-weight: bold;
    }

    .connect-button {
      border-radius: 5px;
      border: solid 3px white;
      font-size: x-large;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: 1.5pt;
      text-align: center;
      font-variant: small-caps;
      color: white;
      padding: 0.5em 2em;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        padding: 0.25em 2em;
      }
      @include hover-focus {
        color: $secondary;
        text-decoration: none;
        background: white;
      }
    }

    min-height: initial;
  }

  #page {
    min-height: 100vh;
  }

  #page-content {
    .section .activity .modtype_label .label {
      div {
        padding-right: 0;
      }
    }

    .section .label .contentwithoutlink {
      padding-right: 0;
    }
  }
}

/* Dashboard */
.db-doubleblock {
  width: 49%;
}

.db-singleblock {
  width: 100%;
}

@media (max-width: map-get($grid-breakpoints, "md")) {
  .db-doubleblock {
    width: 100%;
  }
}
/* ... */

